[package]
name = "timug"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
colored = "2.1.0"
minijinja = { version = "2.5.0", features = ["loader"] }
pulldown-cmark = "0.12.2"
pulldown-cmark-to-cmark = "19.0.0"
run_shell = "0.1.13"
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde_json = "1.0.133"
serde_yaml = "0.9"
thiserror = "2.0.3"
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.14.0"
