[package]
name = "timug"
version = "0.1.0"
edition = "2021"
authors = ["Erhan BARIS <erhanbaris@gmail.com>"]
description = """
It has been created for personal blog creation purpose. Timus has its limits, but it fulfills the purposes for which it was created.
"""
documentation = "https://github.com/erhanbaris/timug"
homepage = "https://github.com/erhanbaris/timug"
repository = "https://github.com/erhanbaris/timug"
keywords = ["blog", "static-page", "static-page-generator"]
categories = ["command-line-utilities", "text-processing"]
license = "GNU General Public License, version 2"

[[bin]]
name = "timug"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
console = "0.15.8"
minijinja = { version = "2.5.0", features = ["loader"] }
parking_lot = { version = "0.12.3", features = ["serde", "owning_ref", "arc_lock"] }
pulldown-cmark = "0.12.2"
pulldown-cmark-to-cmark = "19.0.0"
run_shell = "0.1.13"
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde_json = "1.0.133"
serde_yaml = "0.9"
thiserror = "2.0.3"
unidecode = "0.3.0"
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.14.0"
