[package]
name = "timug"
version = "0.1.3"
edition = "2021"
authors = ["Erhan BARIS <erhanbaris@gmail.com>"]
description = """
It has been created for personal blog creation purpose. Timus has its limits, but it fulfills the purposes for which it was created.
"""
documentation = "https://github.com/erhanbaris/timug"
homepage = "https://github.com/erhanbaris/timug"
repository = "https://github.com/erhanbaris/timug"
keywords = ["blog", "static-page", "page-generator", "generator", "markdown"]
categories = ["command-line-utilities", "text-processing"]
license = "GPL-2.0"
readme = "readme.md"
exclude = [".github/", "blog/", ".cargo", ".vscode", "timug.yaml", "renovate.json"]

[[bin]]
name = "timug"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.23", features = ["derive"] }
console = "0.15.8"
minijinja = { version = "2.5.0", features = ["loader"] }
parking_lot = { version = "0.12.3", features = ["serde", "owning_ref", "arc_lock"] }
pulldown-cmark = "0.12.2"
pulldown-cmark-to-cmark = "20.0.0"
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde_json = "1.0.133"
serde_yaml = "0.9"
subprocess = "0.2.9"
unidecode = "0.3.0"
urlencoding = "2.1.3"
rust-embed="8.5.0"
axum = "0.7.9"
tokio = "1.42.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
notify = "7.0.0"
log = "0.4.22"
env_logger = "0.11.6"
snafu = "0.8.5"

[dev-dependencies]
tempfile = "3.14.0"
